# rust-enhancd

./: .travis.yml  Cargo.toml  README.md
src/: database.rs  main.rs  renhancd_error.rs  subcommands.rs
src/subcommands/: delete.rs  getkeys.rs  insert.rs  update.rs
test/: test.db
